# conference-app

./: .env  .env.docker  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  test.db  test_main.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/crud/: presentations_crud.py  rooms_crud.py  schedules_crud.py  users_crud.py
app/models/: __init__.py  base.py  presentation.py  schedule.py  user.py
migrations/: env.py
migrations/versions/: c593167a2f9d_initial_tables.py
tests/: conftest.py  test_main.py  test_presentations.py  test_rooms.py  test_root.py  test_schedules.py  test_users.py
